[gd_scene load_steps=8 format=3 uid="uid://6fm7o11j3dxi"]

[ext_resource type="Script" uid="uid://d0vyhy1adfyk1" path="res://Select_Character/Scripts/select_character.gd" id="1_2hqoq"]
[ext_resource type="Texture2D" uid="uid://nn6wuj37187w" path="res://Select_Character/Assests/Background.png" id="1_jjuio"]
[ext_resource type="Texture2D" uid="uid://bc88ey6c7o6hp" path="res://Select_Character/Assests/players/players_blue.png" id="2_2hqoq"]
[ext_resource type="Texture2D" uid="uid://6fj6b3h8k0li" path="res://Select_Character/Assests/buttons/right_1.png" id="3_ud4ve"]
[ext_resource type="Texture2D" uid="uid://7ui44oelco71" path="res://Select_Character/Assests/buttons/right_2.png" id="4_if017"]
[ext_resource type="Texture2D" uid="uid://b1bewu504a517" path="res://Select_Character/Assests/buttons/left_1.png" id="5_tgi2p"]
[ext_resource type="Texture2D" uid="uid://dhr6pvcsa7hax" path="res://Select_Character/Assests/buttons/left_2.png" id="6_p2lss"]

[node name="Select_Character" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2hqoq")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 641.0
offset_bottom = 361.0
texture = ExtResource("1_jjuio")
expand_mode = 1

[node name="sprite_controler" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="sprite_controler"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -101.0
offset_top = -65.0
offset_right = 99.0
offset_bottom = 87.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.180392, 0, 1, 0.482353)

[node name="Sprite2D" type="Sprite2D" parent="sprite_controler/ColorRect"]
position = Vector2(104, 80)
scale = Vector2(2.0125, 2.3375)
texture = ExtResource("2_2hqoq")
vframes = 2

[node name="next" type="TextureButton" parent="sprite_controler"]
layout_mode = 0
offset_left = 104.0
offset_top = 2.0
offset_right = 128.0
offset_bottom = 26.0
texture_normal = ExtResource("3_ud4ve")
texture_pressed = ExtResource("4_if017")
stretch_mode = 0

[node name="back" type="TextureButton" parent="sprite_controler"]
offset_left = -128.0
offset_top = 2.0
offset_right = -104.0
offset_bottom = 26.0
texture_normal = ExtResource("5_tgi2p")
texture_pressed = ExtResource("6_p2lss")
stretch_mode = 0

[node name="OptionButton" type="OptionButton" parent="sprite_controler"]
layout_mode = 0
offset_left = -40.0
offset_top = 92.0
offset_right = 40.0
offset_bottom = 123.0
item_count = 4
popup/item_0/text = "Blue"
popup/item_0/id = 0
popup/item_1/text = "Green"
popup/item_1/id = 1
popup/item_2/text = "Red"
popup/item_2/id = 2
popup/item_3/text = "Grey"
popup/item_3/id = 3

[connection signal="pressed" from="sprite_controler/next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="sprite_controler/back" to="." method="_on_back_pressed"]
[connection signal="item_selected" from="sprite_controler/OptionButton" to="." method="_on_option_button_item_selected"]
